set (_SRCS
    ArithmeticError.cpp
    CLRangeError.cpp
    ClassicException.cpp
    ClassicField.cpp
    ClassicRandom.cpp
    ComplexErrorFun.cpp
    ConvergenceError.cpp
    DivideError.cpp
    DomainError.cpp
    FormatError.cpp
    GeneralClassicException.cpp
    LogicalError.cpp
    Mesher.cpp
    MSLang.cpp
    MSLang/ArgumentExtractor.cpp
    MSLang/BoundingBox2D.cpp
    MSLang/Difference.cpp
    MSLang/Ellipse.cpp
    MSLang/Intersection.cpp
    MSLang/Mask.cpp
    MSLang/matheval.cpp
    MSLang/Polygon.cpp
    MSLang/QuadTree.cpp
    MSLang/Rectangle.cpp
    MSLang/Repeat.cpp
    MSLang/Rotation.cpp
    MSLang/Shear.cpp
    MSLang/SymmetricDifference.cpp
    MSLang/Translation.cpp
    MSLang/Triangle.cpp
    MSLang/Union.cpp
    Options.cpp
    OverflowError.cpp
    ParseError.cpp
    PortableBitmapReader.cpp
    PortableGraymapReader.cpp
    Util.cpp
    RingSection.cpp
    SDDSParser.cpp
    SDDSParser/array.cpp
    SDDSParser/associate.cpp
    SDDSParser/ast.cpp
    SDDSParser/column.cpp
    SDDSParser/data.cpp
    SDDSParser/description.cpp
    SDDSParser/file.cpp
    SDDSParser/include.cpp
    SDDSParser/parameter.cpp
    SDDSParser/version.cpp
    EarlyLeaveException.cpp
    OpalException.cpp
    OpalFilter.cpp
    RegularExpression.cpp
    Timer.cpp
    )

set (HDRS
    ArithmeticError.h
    CLRangeError.h
    ClassicException.h
    ClassicField.h
    ClassicRandom.h
    ComplexErrorFun.h
    ConvergenceError.h
    DivideError.h
    DomainError.h
    FormatError.h
    GeneralClassicException.h
    LogicalError.h
    Mesher.h
    MSLang.h
    MSLang/ArgumentExtractor.h
    MSLang/AffineTransformation.h
    MSLang/BoundingBox2D.h
    MSLang/Difference.h
    MSLang/Ellipse.h
    MSLang/Intersection.h
    MSLang/Mask.h
    MSLang/matheval.h
    MSLang/matheval.hpp
    MSLang/Polygon.h
    MSLang/QuadTree.h
    MSLang/Rectangle.h
    MSLang/Repeat.h
    MSLang/Rotation.h
    MSLang/Shear.h
    MSLang/SymmetricDifference.h
    MSLang/Translation.h
    MSLang/Triangle.h
    MSLang/Union.h
    Options.h
    OverflowError.h
    ParseError.h
    PortableBitmapReader.h
    PortableGraymapReader.h
    RingSection.h  
    Util.h
    EarlyLeaveException.h
    OpalException.h
    OpalFilter.h
    RegularExpression.h
    Timer.h
    )

target_include_directories(opalx PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})

target_sources(opalx PRIVATE ${_SRCS})

install (FILES ${HDRS} DESTINATION "${CMAKE_INSTALL_PREFIX}/include/Utilities")